[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "oddslib"
version = "0.1.0"
description = "Odds-format conversion + de-vigging (multiplicative/additive/power/Shin) + hold."
authors = [{name = "superkush06"}]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.5"]

[tool.setuptools.packages.find]
include = ["oddslib*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501", "E702"]
